samples/_failures_safe/1761271296_ece349_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_41dfbb0e.c: In function ‘main’:
./samples/SAFE/__tmp_41dfbb0e.c:144:24: error: missing terminating " character
  144 |                 printf("Determinant only supported up to 3x
      |                        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_41dfbb0e.c:144:17: error: expected expression at end of input
  144 |                 printf("Determinant only supported up to 3x
      |                 ^~~~~~
./samples/SAFE/__tmp_41dfbb0e.c:144:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_41dfbb0e.c:144:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_41dfbb0e.c:144:17: error: expected declaration or statement at end of input
